--- a/PlayTest-data-builder/PlayTest-data-builder.csproj
+++ b/PlayTest-data-builder/PlayTest-data-builder.csproj
@@ -45,9 +45,19 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
+    <Compile Include="5E_DND\LoadData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <None Include="obj\Debug\PlayTest-data-builder.csproj.FileListAbsolute.txt" />
+    <None Include="obj\Debug\PlayTest-data-builder.csprojAssemblyReference.cache" />
+    <None Include="bin\Debug\PlayTest-data-builder.exe.config" />
+    <None Include="bin\Debug\PlayTest-data-builder.vshost.exe" />
+    <None Include="bin\Debug\PlayTest-data-builder.vshost.exe.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
